lesson11 - use the thread username for comments
